# alt-lib

./: CMakeLists.txt
docs/: TODO.txt
docs/constants/: euler-mask.txt  gold.txt  pi.txt  tau.txt
headers/: algorithm.h  constants.h  list.h  math.h  point.h  tupple.h  vector.h
src/: algorithm.tpp  constants.cpp  list.tpp  main.cpp  math.tpp  math_vector.tpp  matrix.tpp  point.tpp  tupple.tpp  vector.tpp
